[gd_scene load_steps=4 format=3 uid="uid://d23vm7fpygfv7"]

[ext_resource type="Script" path="res://Scenes/CharacterScreen/CharacterSetting.gd" id="1_5if0m"]
[ext_resource type="PackedScene" uid="uid://oxxrws4k27pk" path="res://Classes/CustomUI/VirtualKeyboard/VirtualKeyboard.tscn" id="2_1dgad"]
[ext_resource type="PackedScene" uid="uid://kps6urduxyub" path="res://Classes/CustomUI/GamepadSelectButton/GamepadSelectButton.tscn" id="3_itu8j"]

[node name="CharacterSetting" type="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.5
offset_right = 64.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_5if0m")

[node name="Separator" type="Container" parent="."]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ControllerLabel" type="Label" parent="."]
layout_mode = 2
text = "Controller"
horizontal_alignment = 1

[node name="TextEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_mode = 1
placeholder_text = "Name"
max_length = 10

[node name="VirtualKeyboard" parent="." instance=ExtResource("2_1dgad")]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Ready" parent="." node_paths=PackedStringArray("downSelect") instance=ExtResource("3_itu8j")]
layout_mode = 2
size_flags_horizontal = 1
text = "Listo"
focused = true
downSelect = NodePath("../Cancel")

[node name="Cancel" parent="." node_paths=PackedStringArray("upSelect") instance=ExtResource("3_itu8j")]
layout_mode = 2
size_flags_horizontal = 1
text = "Eliminar"
upSelect = NodePath("../Ready")

[connection signal="pressed" from="Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
